add docs for heap sizing and gc collectors for patched CLHM (1<<10)